Actions
Bug #7605
closedwe should not attempt to write to ZFS while panicing
Start date:
2016-11-21
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
When we panic, we should not attempt to write dirty pages to ZFS. This is ineffective (since we don't wait for the txg to sync), and can cause a subsequent panic if ZFS is not in a good state (or we are short on stack space).
Updated by Electric Monk over 6 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 3f11de9ddb9e8b567df284c7f495ac53076611c4
commit 3f11de9ddb9e8b567df284c7f495ac53076611c4 Author: Sara Hartse <sara.hartse@delphix.com> Date: 2016-12-06T19:02:46.000Z 7605 we should not attempt to write to ZFS while panicing Reviewed by: Matt Ahrens <mahrens@delphix.com> Reviewed by: Pavel Zakharov <pavel.zakharov@delphix.com> Reviewed by: George Wilson <george.wilson@delphix.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions