7605 we should not attempt to write to ZFS while panicing

Reviewed by: Matt Ahrens <mahrens@delphix.com>
Reviewed by: Pavel Zakharov <pavel.zakharov@delphix.com>
Reviewed by: George Wilson <george.wilson@delphix.com>

When we panic, we should not attempt to write dirty pages to ZFS. This
is ineffective (since we don't wait for the txg to sync), and can cause
a subsequent panic if ZFS is not in a good state (or we are short on
stack space).

Closes #245